# hypr-whisper

./: AGENTS.md  package.json  svelte.config.js  tsconfig.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  whisper.rs
src/lib/components/: SettingsPage.svelte
src/routes/: +layout.svelte  +page.svelte  layout.css
