[package]
name = "hyprwhisper"
version = "0.1.0"
description = "HyprWhisper - Local Speech-to-Text for Hyprland"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyprwhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
cuda = ["whisper-rs/cuda"]
rocm = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Whisper speech-to-text
whisper-rs = "0.14"

# Audio recording
cpal = "0.15"
hound = "3.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
parking_lot = "0.12"
once_cell = "1.19"
dirs = "5"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tempfile = "3"
anyhow = "1"
thiserror = "2"

# Linux-specific for WebView transparency
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"

